# DataAgent

./: .gitignore  Makefile
backend/: .env.example  README.md  pyproject.toml  verify_all_rules.py  verify_highlight_rules.py  verify_insight_rules.py  verify_percentile_rules.py
backend/config/: insight_rules.yaml
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  analyst_agent.py  insight_agent.py  nlu_agent.py  planner_agent.py  reporter_agent.py
backend/src/api/: sessions.py
backend/src/config/: settings.py
backend/src/graph/: __init__.py  builder.py  nodes.py  state.py
backend/src/models/: __init__.py  analysis.py  common.py  insight.py  intent.py  query.py
backend/src/prompts/: __init__.py  nlu_prompt.py  planner_prompt.py
backend/src/rag/: __init__.py  agents.py  config.py  database.py  embedding.py  models.py  retriever.py  splitter.py  sync.py  workflow_integration.py
backend/src/services/: advertiser_service.py  session_service.py
backend/src/tools/: __init__.py  anomaly_detector.py  business_rules.py  chart_selector.py  clarification_generator.py  custom_report_client.py  executor.py  filter_parser.py  (+8 more)
backend/tests/: test_analyst_agent.py  test_anomaly_detector.py  test_business_rules.py  test_custom_report_client.py  test_executor_node.py  test_full_graph_flow.py  test_graph_state.py  test_hitl_node.py  test_insight_integration.py  test_insight_rules.py  test_models.py  test_nlu_agent.py  test_planner_agent.py  test_reporter_agent.py  test_term_mapper.py  test_time_parser.py
backend/tools/: calc_percentile_thresholds.py
(+74 files in other folders)
