[tool.poetry]
name = "ad-report-agent"
version = "0.1.0"
description = "Multi-Agent Ad Report Analysis System"
authors = ["Your Name"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.0"
anthropic = "^0.50.0"
openai = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
elasticsearch = "8.17.0"
psycopg2-binary = "^2.9.12"
sqlalchemy = "^2.0.49"
pgvector = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core==1.7.0"]
build-backend = "poetry.core.masonry.api"
